--- a/package.json
+++ b/package.json
@@ -5,18 +5,34 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.23.12",
+    "bootstrap": "^4.5.0",
+    "gatsby": "^2.24.12",
     "gatsby-image": "^2.4.9",
-    "gatsby-plugin-manifest": "^2.4.14",
+    "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-manifest": "^2.4.21",
+    "gatsby-plugin-netlify": "^2.3.11",
+    "gatsby-plugin-nprogress": "^2.3.10",
     "gatsby-plugin-offline": "^3.2.13",
+    "gatsby-plugin-preact": "^4.0.9",
+    "gatsby-plugin-preload-fonts": "^1.2.19",
     "gatsby-plugin-react-helmet": "^3.3.6",
+    "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-plugin-webfonts": "^1.1.3",
     "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-source-graphql": "^2.6.2",
     "gatsby-transformer-sharp": "^2.5.7",
+    "node-sass": "^4.14.1",
+    "preact": "^10.4.6",
+    "preact-render-to-string": "^5.1.10",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.3.0",
+    "react-countdown-hook": "^0.2.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
     "prettier": "2.0.5"
@@ -26,6 +42,7 @@
   ],
   "license": "0BSD",
   "scripts": {
+    "preload-fonts": "gatsby-preload-fonts",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
