--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^2.24.12",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-google-tagmanager": "^2.3.11",
     "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-netlify": "^2.3.11",
     "gatsby-plugin-nprogress": "^2.3.10",
